--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: "Thayumanavar"
 
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: "Force Awakens"
+slogan: ""
 
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
@@ -21,9 +21,10 @@ description: "Personal Home Page"
 
 # This URL is the main adresse. Don't include a slash at the end.
 #
+#url: ""
 url: "https://thayumanavar77.github.io"
-#baseurl: "http://thayumanavar77.github.io"
-baseurl: ""
+baseurl: "http://thayumanavar77.github.io"
+#baseurl: ""
 
 # This is for the editing function in _/includes/improve_content.html
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -35,11 +36,12 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
 #
-urlimg: "https://thayumanavar77.github.io/images/"
+#urlimg: "https://thayumanavar77.github.io/images/"
+urlimg: "assets/img/"
 
 
 # Logo size is 600x80 pixels
-#logo: "logo.png"
+logo: "thayumanavar.png"
 
 
 # Paginates all X entries
