More layout changes.

--- a/_config.yml
+++ b/_config.yml
@@ -183,7 +183,7 @@ msapplication_tilecolor:                "#fabb00"
 #
 # used in _includes/comments.html
 
-disqus_shortname: thayumanavarB
+disqus_shortname: thayumanavar
 
 
 #      _____                
