--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,21 @@
+sudo: false
 language: ruby
-rvm:
-- 2.2.5
+cache:
+  bundler: true
+  directories:
+    - node_modules
+  rvm:
+  - 2.3
 
-before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+script:
+  - npm install
+  - bundle exec jekyll build
+  - gulp compress
 
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+before_deploy:
+  - chmod +x deploy.sh
 
-# branch whitelist, only for GitHub Pages
-branches:
-  only:
-  - gh-pages     # test the gh-pages branch
-  - /pages-(.*)/ # test every branch which starts with "pages-"
-
-env:
-  global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
-sudo: false # route your build to the container-based infrastructure for a faster build
-Ok, now for an explanation of each line:
+deploy:
+  provider: script
+  script: ./deploy.sh
+  skip_cleanup: true
