--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: "Personal Home Page"
 #url: ""
 #url: "http://127.0.0.1:4000"
 #baseurl: "http://127.0.0.1:4000"
-url: "https://thayumanavar77.github.io"
+#url: "https://thayumanavar77.github.io"
 baseurl: "http://thayumanavar77.github.io"
 baseurl: ""
 
@@ -47,11 +47,11 @@ logo: "thayumanavar.png"
 
 
 # Paginates all X entries
-#paginate: 5
+paginate: 5
 
 
 # Pagination path › Important for news page in /news/ to work
-#paginate_path: "news/page:num"
+paginate_path: "news/page:num"
 
 
 # Theme works best with Kramdown (using the table of contents function)
@@ -59,7 +59,7 @@ markdown: kramdown
 permalink: /:categories/:title/
 highlight: pygments
 excerpt_separator: "\n\n"
-exclude: []
+exclude: [vendor]
 include: ['.htaccess']
 
 
@@ -73,12 +73,11 @@ exclude:
     - Gemfile.lock
     - LICENSE
     - README.md
-
-
+    
 # added by thayumanavar.
 collections:
   traces:
-    permalink: /traces/:year/:month/:day/:title
+    permalink: /traces/:title.html
     output: true
 
 #
